tests/enum_perf/enum_perf.exp
Error ----------------------------------------------------------------------------------------------------- yuge.js:23:6

Cannot cast empty string to `ErrorCode` because string [1] is incompatible with enum [2]. [incompatible-cast]

   yuge.js:23:6
   23|     ("": ErrorCode);  // also, error pos omits this line completely
            ^^ [1]

References:
   yuge.js:23:10
   23|     ("": ErrorCode);  // also, error pos omits this line completely
                ^^^^^^^^^ [2]



Found 1 error
